minor layout issue in homepage. minor styling in league tables

--- a/appengine/css/style.css
+++ b/appengine/css/style.css
@@ -87,6 +87,12 @@
 
 td {
 	padding: 0 10px;
+	min-width: 50px;
+	text-align: right;
+}
+
+td:first-child {
+	text-align: left;
 }
 
 th
